--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express-session": "^1.18.1",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "vue": "^3.5.12"
   },
   "scripts": {
     "start": "nodemon app.js"
