--- a/views/ql-khachhang/package.json
+++ b/views/ql-khachhang/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-good-table": "^2.21.11",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
