--- a/views/ql-khachhang/package.json
+++ b/views/ql-khachhang/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.6.10",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-good-table": "^2.21.11",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-select2-component": "^1.0.1",
+    "vue3-select2-component": "^0.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
